commit some changes as stated by amjad bhai

--- a/app/src/main/res/layout/activity_section_c_form2.xml
+++ b/app/src/main/res/layout/activity_section_c_form2.xml
@@ -35,8 +35,9 @@
                         <com.edittextpicker.aliazaz.EditTextPicker
                             android:id="@+id/kf2c01"
                             style="@style/EditText_number"
-                            android:hint="@string/kf2c01a"
-                            android:maxLength="2"
+                            android:hint="##.#"
+                            android:layoutDirection="ltr"
+                            app:mask="##.#"
                             app:maxValue="40"
                             app:minValue="34"
                             app:type="range" />
