--- a/app/src/main/res/layout/activity_section_e_form3.xml
+++ b/app/src/main/res/layout/activity_section_e_form3.xml
@@ -148,7 +148,9 @@
                     android:id="@+id/fldGrpCVkf3e04"
                     style="@style/cardView">
 
-                    <LinearLayout style="@style/linearlayout_view">
+                    <LinearLayout
+                        style="@style/linearlayout_view"
+                        android:layoutDirection="ltr">
 
                         <TextView
                             style="@style/i_textview"
@@ -157,8 +159,8 @@
                         <com.edittextpicker.aliazaz.EditTextPicker
                             android:id="@+id/kf3e04a"
                             style="@style/EditText_number"
-                            android:hint="@string/kf3e04a"
-                            android:maxLength="2"
+                            android:hint="##.#"
+                            app:mask="##.#"
                             app:maxValue="40"
                             app:minValue="34"
                             app:type="range" />
@@ -166,8 +168,8 @@
                         <com.edittextpicker.aliazaz.EditTextPicker
                             android:id="@+id/kf3e04b"
                             style="@style/EditText_number"
-                            android:hint="@string/kf3e04b"
-                            android:maxLength="2"
+                            android:hint="##.#"
+                            app:mask="##.#"
                             app:maxValue="40"
                             app:minValue="34"
                             app:type="range" />
@@ -470,6 +472,12 @@
                                 android:text="@string/kf3e12e" />
 
                         </LinearLayout>
+
+                        <CheckBox
+                            android:id="@+id/kf3e12f"
+                            style="@style/i_checkbox"
+                            android:tag="-1"
+                            android:text="@string/kf3e12f" />
 
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
