--- a/app/src/main/res/layout/activity_section_c_form2.xml
+++ b/app/src/main/res/layout/activity_section_c_form2.xml
@@ -40,6 +40,7 @@
                             app:mask="##.#"
                             app:maxValue="40"
                             app:minValue="34"
+                            app:pattern="^(\\d{2,2}\\.\\d{1,1})$"
                             app:type="range" />
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
@@ -61,7 +62,7 @@
                             android:hint="@string/kf2c02a"
                             android:maxLength="3"
                             app:maxValue="160"
-                            app:minValue="140"
+                            app:minValue="120"
                             app:type="range" />
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
