--- a/app/src/main/res/layout/activity_section_e_form3.xml
+++ b/app/src/main/res/layout/activity_section_e_form3.xml
@@ -45,6 +45,45 @@
 
                 </android.support.v7.widget.CardView>
 
+                <!-- kf3e22-->
+                <android.support.v7.widget.CardView
+                    android:id="@+id/fldGrpCVkf3e22"
+                    style="@style/cardView">
+
+                    <LinearLayout style="@style/linearlayout_view">
+
+                        <TextView
+                            style="@style/i_textview"
+                            android:text="@string/kf3e22" />
+
+                        <com.edittextpicker.aliazaz.EditTextPicker
+                            android:id="@+id/kf3e22"
+                            style="@style/EditText_number"
+                            android:hint="@string/kf3e22a"
+                            android:maxLength="2"
+                            app:maxValue="10"
+                            app:minValue="0"
+                            app:type="range" />
+
+                    </LinearLayout>
+
+                </android.support.v7.widget.CardView>
+
+                <!-- H9-->
+                <android.support.v7.widget.CardView
+                    style="@style/cardView">
+
+                    <LinearLayout style="@style/linearlayout_view">
+
+                        <TextView
+                            style="@style/textview_heading"
+                            android:text="@string/kf3eh9"
+                            android:textStyle="bold" />
+
+                    </LinearLayout>
+
+                </android.support.v7.widget.CardView>
+
                 <!-- kf3e02-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf3e02"
