--- a/app/src/main/res/layout/activity_section_g_form3.xml
+++ b/app/src/main/res/layout/activity_section_g_form3.xml
@@ -943,7 +943,7 @@
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf3g09"
                     style="@style/cardView"
-                    android:visibility='@{kf3g08a.checked? View.VISIBLE : View.GONE}'>
+                    android:visibility='@{kf3g08a.checked ? View.VISIBLE : View.GONE}'>
 
                     <LinearLayout style="@style/linearlayout_view">
 
@@ -955,6 +955,7 @@
                             android:id="@+id/kf3g09"
                             style="@style/EditText_number"
                             android:enabled="@{kf3g09a.checked ? false : true}"
+                            android:text='@{kf3g09a.checked ? "" : kf3g09.getText().toString()}'
                             android:hint="@string/kf3g09"
                             android:maxLength="2"
                             app:maxValue="23"
