--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,7 +33,6 @@
     <!-- Irfan Scrollview  -->
 
     <style name="i_scrollview">
-
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginBottom">5sp</item>
@@ -54,6 +53,17 @@
         <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textSize">20sp</item>
+    </style>
+
+    <!-- SAJID Textview  -->
+    <style name="textviews">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">16sp</item>
     </style>
 
     <style name="textview_heading">
@@ -118,7 +128,43 @@
         <item name="android:background">@drawable/et_style</item>
         <item name="android:textColorHint">@color/gray</item>
         <item name="android:padding">10dp</item>
+    </style>
 
+    <style name="textInputs">
+        <item name="android:textSize">20sp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center_vertical</item>
+        <!--<item name="android:layout_marginRight">10dp</item>
+        <item name="android:layout_marginTop">15dp</item>
+        <item name="android:layout_marginBottom">15dp</item>
+        <item name="android:layout_marginLeft">10dp</item>-->
+        <item name="android:layout_margin">8dp</item>-->
+        <item name="android:textColorHint">@color/black_overlay</item>
+        <item name="android:background">@drawable/et_style</item>
+        <item name="android:inputType">textPostalAddress</item>
+        <item name="android:padding">8dp</item>
+        <item name="android:radius">2dp</item>
+    </style>
+
+    <style name="EditTextComa" parent="@style/textInputs">
+        <item name="android:digits">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ , .</item>
+    </style>
+
+    <style name="EditTextAlpha" parent="@style/textInputs">
+        <item name="android:digits">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ </item>
+    </style>
+
+    <style name="EditTextAlphaNumeric" parent="@style/textInputs">
+        <item name="android:digits">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789 </item>
+    </style>
+
+    <style name="EditTextNum" parent="@style/textInputs">
+        <item name="android:inputType">number</item>
+    </style>
+
+    <style name="EditTextdeci" parent="@style/textInputs">
+        <item name="android:inputType">numberDecimal</item>
     </style>
 
     <!-- EditText Acept Characters Starts. -->
@@ -217,7 +263,18 @@
         <item name="android:elevation">1dp</item>
     </style>
 
-    <style name="checkbox" parent="android:Widget.Material.Light.CompoundButton.CheckBox">
+
+    <style name="checkbox" parent="Widget.AppCompat.CompoundButton.CheckBox">
+        <item name="android:textSize">18sp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:elevation">1dp</item>
+        <item name="android:layout_marginBottom">1dp</item>
+        <item name="android:padding">15dp</item>
+    </style>
+
+    <style name="checkbox1" parent="android:Widget.Material.Light.CompoundButton.CheckBox">
         <item name="android:layout_gravity">right</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -308,6 +365,14 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">8dp</item>
         <item name="android:orientation">vertical</item>
+        <item name="android:padding">2dp</item>
+    </style>
+
+    <style name="hlinearlayout">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:layout_margin">2dp</item>
         <item name="android:padding">2dp</item>
     </style>
 
